--- a/src/Neuroglia.Data.Expressions/Neuroglia.Data.Expressions.csproj
+++ b/src/Neuroglia.Data.Expressions/Neuroglia.Data.Expressions.csproj
@@ -1,21 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
+	
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <GenerateDocumentationFile>True</GenerateDocumentationFile>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
-
+	
   <ItemGroup>
-    <PackageReference Include="Json.More.Net" Version="1.9.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Neuroglia.Core\Neuroglia.Core.csproj" />
+    <ProjectReference Include="..\Neuroglia.Serialization.Abstractions\Neuroglia.Serialization.csproj" />
   </ItemGroup>
-
+	
 </Project>
