feat(Solution): Added Data.Infrastructure.Memory and Data.Infrastructure.Mongo projects

--- a/src/Neuroglia.Data.Infrastructure.EventSourcing.Memory/Neuroglia.Data.Infrastructure.EventSourcing.Memory.csproj
+++ b/src/Neuroglia.Data.Infrastructure.EventSourcing.Memory/Neuroglia.Data.Infrastructure.EventSourcing.Memory.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Neuroglia.Data.Infrastructure.EventSourcing\Neuroglia.Data.Infrastructure.EventSourcing.csproj" />
+    <ProjectReference Include="..\Neuroglia.Plugins.Abstractions\Neuroglia.Plugins.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
