--- a/src/Neuroglia.Data.Infrastructure.Memory/Neuroglia.Data.Infrastructure.Memory.csproj
+++ b/src/Neuroglia.Data.Infrastructure.Memory/Neuroglia.Data.Infrastructure.Memory.csproj
@@ -4,16 +4,16 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>$(MSBuildProjectName.Replace(" ", "_").Replace(".Memory", ""))</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
+	<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Neuroglia.Data.Infrastructure.Abstractions\Neuroglia.Data.Infrastructure.Abstractions.csproj" />
-    <ProjectReference Include="..\Neuroglia.Mediation\Neuroglia.Mediation.csproj" />
-    <ProjectReference Include="..\Neuroglia.Serialization.Abstractions\Neuroglia.Serialization.csproj" />
+    <ProjectReference Include="..\Neuroglia.Plugins.Abstractions\Neuroglia.Plugins.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
