--- a/src/Neuroglia.Data.Infrastructure.Abstractions/Neuroglia.Data.Infrastructure.Abstractions.csproj
+++ b/src/Neuroglia.Data.Infrastructure.Abstractions/Neuroglia.Data.Infrastructure.Abstractions.csproj
@@ -4,7 +4,12 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>$(MSBuildProjectName.Replace(" ", "_").Replace(".Abstractions", "")</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Neuroglia.Data\Neuroglia.Data.csproj" />
