feat(Plugins): Added named plugin sources to better discriminate plugins, along with the possibility to tag plugins

--- a/src/Neuroglia.Plugins.Abstractions/Neuroglia.Plugins.Abstractions.csproj
+++ b/src/Neuroglia.Plugins.Abstractions/Neuroglia.Plugins.Abstractions.csproj
@@ -7,4 +7,12 @@
     <RootNamespace>$(MSBuildProjectName.Replace(" ", "_").Replace(".Abstractions", ""))</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Reflection.MetadataLoadContext" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Neuroglia.Core\Neuroglia.Core.csproj" />
+  </ItemGroup>
+
 </Project>
