--- a/src/Neuroglia.Plugins/Neuroglia.Plugins.csproj
+++ b/src/Neuroglia.Plugins/Neuroglia.Plugins.csproj
@@ -8,15 +8,15 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Neuroglia.Plugins.Abstractions\Neuroglia.Plugins.Abstractions.csproj" />
-    <ProjectReference Include="..\Neuroglia.Serialization.Abstractions\Neuroglia.Serialization.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
     <PackageReference Include="NuGet.PackageManagement" Version="6.7.0" />
 	<PackageReference Include="NuGet.Protocol" Version="6.7.0" />
-    <PackageReference Include="System.Reflection.MetadataLoadContext" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
