--- a/.github/workflows/publish-only.yml
+++ b/.github/workflows/publish-only.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        dotnet-version: ['6.0.x' ]
+        dotnet-version: ['7.0.x' ]
 
     steps:
       - name: Checkout
@@ -36,4 +36,4 @@ jobs:
         run: dotnet build "${{ env.SOLUTION }}" --configuration Release --no-restore
       
       - name: Publish NuGet Packages
-        run: dotnet nuget push "./src/*/*/bin/Release/*.nupkg" --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
+        run: dotnet nuget push "./src/*/bin/Release/*.nupkg" --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
