--- a/src/Neuroglia.Data.Infrastructure.ObjectStorage.Abstractions/Neuroglia.Data.Infrastructure.ObjectStorage.Abstractions.csproj
+++ b/src/Neuroglia.Data.Infrastructure.ObjectStorage.Abstractions/Neuroglia.Data.Infrastructure.ObjectStorage.Abstractions.csproj
@@ -11,7 +11,7 @@
     <Authors>Neuroglia SRL</Authors>
     <RepositoryUrl>https://github.com/neuroglia-io/framework</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-	<PackageTags>neuroglia framework data infrastructure abstractions</PackageTags>
+	<PackageTags>neuroglia framework data infrastructure object-storage</PackageTags>
     <Version>3.1.1</Version>
     <NeutralLanguage>en</NeutralLanguage>
 	<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
@@ -30,10 +30,6 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Neuroglia.Data\Neuroglia.Data.csproj" />
   </ItemGroup>
 
 </Project>
