feat(Solution): Refactored the IEventStore to include reading/subscribing to/from all recorded events

--- a/src/Neuroglia.Data.Infrastructure.EventSourcing.Memory/Neuroglia.Data.Infrastructure.EventSourcing.Memory.csproj
+++ b/src/Neuroglia.Data.Infrastructure.EventSourcing.Memory/Neuroglia.Data.Infrastructure.EventSourcing.Memory.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Neuroglia.Data.Infrastructure.EventSourcing\Neuroglia.Data.Infrastructure.EventSourcing.csproj" />
     <ProjectReference Include="..\Neuroglia.Plugins.Abstractions\Neuroglia.Plugins.Abstractions.csproj" />
+    <ProjectReference Include="..\Neuroglia.Reactive\Neuroglia.Reactive.csproj" />
   </ItemGroup>
 
 </Project>
