fix(Measurements): Fixed the UnitOfMeasurementType by decorating it with a TypeConverter and a JsonConverter to enable EnumMember based serialization

--- a/src/Neuroglia.Measurements/Neuroglia.Measurements.csproj
+++ b/src/Neuroglia.Measurements/Neuroglia.Measurements.csproj
@@ -29,4 +29,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Neuroglia.Core\Neuroglia.Core.csproj" />
+  </ItemGroup>
+
 </Project>
