--- a/src/Neuroglia.Data.PatchModel/Neuroglia.Data.PatchModel.csproj
+++ b/src/Neuroglia.Data.PatchModel/Neuroglia.Data.PatchModel.csproj
@@ -35,6 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Neuroglia.Data.Infrastructure.Abstractions\Neuroglia.Data.Infrastructure.Abstractions.csproj" />
     <ProjectReference Include="..\Neuroglia.Serialization.Abstractions\Neuroglia.Serialization.csproj" />
   </ItemGroup>
 
