fix(Solution): Fixed all projects to use embedded debug type fix(Data): Fixed the AggregateState by marking all its properties with JsonIncludeAttributes

--- a/src/Neuroglia.Data/Neuroglia.Data.csproj
+++ b/src/Neuroglia.Data/Neuroglia.Data.csproj
@@ -17,6 +17,7 @@
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageIcon>logo_white_on_blue_256.png</PackageIcon>
     <IsPackable>true</IsPackable>
+	<DebugType>embedded</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
