--- a/src/Neuroglia.Mediation.FluentValidation/Neuroglia.Mediation.FluentValidation.csproj
+++ b/src/Neuroglia.Mediation.FluentValidation/Neuroglia.Mediation.FluentValidation.csproj
@@ -1,38 +1,39 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-		<GenerateDocumentationFile>True</GenerateDocumentationFile>
-		<Company>Neuroglia SRL</Company>
-		<Copyright>Copyright © 2021-Present Neuroglia SRL. All rights reserved.</Copyright>
-		<Authors>Neuroglia SRL</Authors>
-		<RepositoryUrl>https://github.com/neuroglia-io/framework</RepositoryUrl>
-		<RepositoryType>git</RepositoryType>
-		<PackageTags>neuroglia framework mediation fluent-validation validation</PackageTags>
-		<Version>4.2.1</Version>
-		<NeutralLanguage>en</NeutralLanguage>
-		<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-		<PackageIcon>logo_white_on_blue_256.png</PackageIcon>
-		<IsPackable>true</IsPackable>
-	</PropertyGroup>
+  <PropertyGroup>
+  	<TargetFramework>net8.0</TargetFramework>
+  	<ImplicitUsings>enable</ImplicitUsings>
+  	<Nullable>enable</Nullable>
+  	<GenerateDocumentationFile>True</GenerateDocumentationFile>
+  	<Company>Neuroglia SRL</Company>
+  	<Copyright>Copyright © 2021-Present Neuroglia SRL. All rights reserved.</Copyright>
+  	<Authors>Neuroglia SRL</Authors>
+  	<RepositoryUrl>https://github.com/neuroglia-io/framework</RepositoryUrl>
+  	<RepositoryType>git</RepositoryType>
+  	<PackageTags>neuroglia framework mediation fluent-validation validation</PackageTags>
+  	<Version>4.2.1</Version>
+  	<NeutralLanguage>en</NeutralLanguage>
+  	<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+  	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+  	<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+  	<PackageIcon>logo_white_on_blue_256.png</PackageIcon>
+  	<IsPackable>true</IsPackable>
+  	<DebugType>embedded</DebugType>
+  </PropertyGroup>
 
-	<ItemGroup>
-		<None Include="..\..\assets\img\logo_white_on_blue_256.png" Link="logo_white_on_blue_256.png">
-			<PackagePath>\</PackagePath>
-			<Pack>True</Pack>
-		</None>
-	</ItemGroup>
+  <ItemGroup>
+	<None Include="..\..\assets\img\logo_white_on_blue_256.png" Link="logo_white_on_blue_256.png">
+		<PackagePath>\</PackagePath>
+		<Pack>True</Pack>
+	</None>
+  </ItemGroup>
 
-	<ItemGroup>
-	  <PackageReference Include="FluentValidation" Version="11.8.0" />
-	</ItemGroup>
+  <ItemGroup>
+	<PackageReference Include="FluentValidation" Version="11.8.0" />
+  </ItemGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\Neuroglia.Mediation\Neuroglia.Mediation.csproj" />
-	</ItemGroup>
+  <ItemGroup>
+	<ProjectReference Include="..\Neuroglia.Mediation\Neuroglia.Mediation.csproj" />
+  </ItemGroup>
 
 </Project>
