fix(Guards): Added resource-based localization for all GuardExceptions fix(Domain): Removed the DomainException and all related classes, as they are superseeded by GuardExceptions, and are therefore obsolete

--- a/src/Neuroglia.Data.Guards/Neuroglia.Data.Guards.csproj
+++ b/src/Neuroglia.Data.Guards/Neuroglia.Data.Guards.csproj
@@ -28,4 +28,23 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Neuroglia.Core\Neuroglia.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\GuardExceptionMessages.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>GuardExceptionMessages.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\GuardExceptionMessages.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>GuardExceptionMessages.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
