--- a/src/Neuroglia.Eventing.CloudEvents.Infrastructure.Abstractions/Neuroglia.Eventing.CloudEvents.Infrastructure.Abstractions.csproj
+++ b/src/Neuroglia.Eventing.CloudEvents.Infrastructure.Abstractions/Neuroglia.Eventing.CloudEvents.Infrastructure.Abstractions.csproj
@@ -31,6 +31,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
     <PackageReference Include="System.Reactive" Version="6.0.0" />
   </ItemGroup>
 
