--- a/test/Neuroglia.UnitTests/Neuroglia.UnitTests.csproj
+++ b/test/Neuroglia.UnitTests/Neuroglia.UnitTests.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="RichardSzalay.MockHttp" Version="7.0.0" />
     <PackageReference Include="Testcontainers" Version="3.6.0" />
     <PackageReference Include="xunit" Version="2.6.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3">
@@ -42,6 +43,7 @@
     <ProjectReference Include="..\..\src\Neuroglia.Data.Infrastructure.ObjectStorage.Minio\Neuroglia.Data.Infrastructure.ObjectStorage.Minio.csproj" />
     <ProjectReference Include="..\..\src\Neuroglia.Data.Guards\Neuroglia.Data.Guards.csproj" />
     <ProjectReference Include="..\..\src\Neuroglia.Data.PatchModel\Neuroglia.Data.PatchModel.csproj" />
+    <ProjectReference Include="..\..\src\Neuroglia.Eventing.CloudEvents.Infrastructure\Neuroglia.Eventing.CloudEvents.Infrastructure.csproj" />
     <ProjectReference Include="..\..\src\Neuroglia.Mapping\Neuroglia.Mapping.csproj" />
     <ProjectReference Include="..\..\src\Neuroglia.Measurements\Neuroglia.Measurements.csproj" />
     <ProjectReference Include="..\..\src\Neuroglia.Mediation.FluentValidation\Neuroglia.Mediation.FluentValidation.csproj" />
