fix(Solution): Updated solution packages fix(Repositories): Fixed all Repository implementations to ensure not throwing when attempting to retrieve a non-existing entity

--- a/src/Neuroglia.Data.Infrastructure.Mongo/Neuroglia.Data.Infrastructure.Mongo.csproj
+++ b/src/Neuroglia.Data.Infrastructure.Mongo/Neuroglia.Data.Infrastructure.Mongo.csproj
@@ -37,6 +37,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Neuroglia.Data.Guards\Neuroglia.Data.Guards.csproj" />
     <ProjectReference Include="..\Neuroglia.Data.Infrastructure.Abstractions\Neuroglia.Data.Infrastructure.Abstractions.csproj" />
   </ItemGroup>
 
