--- a/src/Neuroglia.Measurements.Sdk.TypeScript/package.json
+++ b/src/Neuroglia.Measurements.Sdk.TypeScript/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^18.18.2",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
+    "mathjs": "^12.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
