fix(CICD): fixed paths

--- a/.github/workflows/ci-js.yml
+++ b/.github/workflows/ci-js.yml
@@ -5,14 +5,12 @@ on:
     branches: [ main ]
     paths:
       - '**/*.Sdk.TypeScript/**'
-    paths-ignore:
-      - '.github/**'
+      - '!.github/**'
   pull_request:
     branches: [ main ]
     paths:
       - '**/*.Sdk.TypeScript/**'
-    paths-ignore:
-      - '.github/**'
+      - '!.github/**'
 
 jobs:
   changes:
