fix(CICD): flagged npm publish with access public [skip ci] [skip hint]

--- a/.github/workflows/js-publish-package.yml
+++ b/.github/workflows/js-publish-package.yml
@@ -40,6 +40,6 @@ jobs:
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}">>.npmrc
           version=$(npm view ${{ inputs.name }} version 2>/dev/null) && npm version $version || true
           npm version patch # patch current version
-          npm publish
+          npm publish --access=public
           version=$(npm view ${{ inputs.name }} version)
           echo "Published ${{ inputs.name }}@$version"
