fix(cicd): added manual trigger of js package pipeline [skip hint] [skip ci]

--- a/.github/workflows/js-package-pipeline.yml
+++ b/.github/workflows/js-package-pipeline.yml
@@ -1,6 +1,11 @@
 name: Pipeline for JS packages
 
 on:
+  workflow_dispatch:
+    inputs:
+      package:
+        required: true
+        type: string
   workflow_call:
     inputs:
       package:
