--- a/.github/workflows/js-package-pipeline.yml
+++ b/.github/workflows/js-package-pipeline.yml
@@ -1,9 +1,12 @@
+# See js-main.yml first
+
 name: Pipeline for JS packages
 
 on:
   workflow_dispatch:
     inputs:
       package:
+        description: The name of the package, without @neuroglia prefix, as described in .github/js-packages.json
         required: true
         type: string
   workflow_call:
@@ -27,7 +30,7 @@ jobs:
       - name: Read packages configuration file
         id: package-config
         run: |
-          package=`cat ./.github/js-packages.json | jq '.${{ inputs.package }}' --compact-output`
+          package=`cat ./.github/js-packages.json | jq '."${{ inputs.package }}"' --compact-output`
           echo "package=$package" >> "$GITHUB_OUTPUT"
       
       - name: Defined output 'package-config' as
@@ -38,7 +41,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          echo "Got config for ${{ inputs.package }} - name: ${{ fromJSON(needs.config.outputs.package-config).name }} - path: ${{ fromJSON(needs.config.outputs.package-config).path }}"
+          echo "Got config for ${{ inputs.package }} - name: ${{ fromJSON(needs.config.outputs.package-config).name }} - path: ${{ fromJSON(needs.config.outputs.package-config).path }} - dependencies: ${{ join(fromJSON(needs.config.outputs.package-config).dependencies, ' ') }}"
           echo "Context event name: ${{ github.event_name }} - ref_name: ${{ github.ref_name }}"
 
   restore:
@@ -47,6 +50,7 @@ jobs:
     with:
       name: ${{ fromJSON(needs.config.outputs.package-config).name }}
       path: ${{ fromJSON(needs.config.outputs.package-config).path }}
+      dependencies: ${{ join(fromJSON(needs.config.outputs.package-config).dependencies, ' ') }}
 
   build:
     needs: 
