--- a/.github/workflows/js-test-package.yml
+++ b/.github/workflows/js-test-package.yml
@@ -22,10 +22,10 @@ jobs:
         with:
           node-version: 18
 
-      - name: Cache dependencies
-        uses: actions/cache@v3
+      - name: Restore cached dependencies
+        uses: actions/cache/restore@v3
         with:
-          path: ${{ format('{0}/{1}/', inputs.path, 'node_modules') }}
+          path: ${{ format('{0}{1}/', inputs.path, 'node_modules') }}
           key: ${{ inputs.name }}-node_modules
       
       - name: Test
