--- a/src/Neuroglia.Measurements.Sdk.TypeScript/package.json
+++ b/src/Neuroglia.Measurements.Sdk.TypeScript/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@neuroglia/common": "*",
+    "@neuroglia/integration": "*",
     "@types/node": "^18.18.2",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
