--- a/src/Neuroglia.Data.Schemas.Json/Neuroglia.Data.Schemas.Json.csproj
+++ b/src/Neuroglia.Data.Schemas.Json/Neuroglia.Data.Schemas.Json.csproj
@@ -30,6 +30,8 @@
 
   <ItemGroup>
     <PackageReference Include="JsonSchema.Net.Generation" Version="3.5.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
