--- a/.github/workflows/js-main.yml
+++ b/.github/workflows/js-main.yml
@@ -2,19 +2,18 @@
 #
 # Two things are needed:
 #
-# 1. configure the package matching path in the "Detect changes" step below.
+# 1. configure path matching the package in the "Detect changes" step below.
 # This allows to match a "package" idenfifier to changes in a subdirectory.
 # e.g.:
 # my-package: '**/my-package/**'
 #
-# 2. configure the package in .github/js-packages.json .
+# 2. configure the package in .github/js-packages.json.
 # This allows to define variables that will be used in the pipeline.
 # e.g:
 # {
 #   "my-package": {<-- the "package" identifier
 #     "name": "@neuroglia/my-package", <-- the actual name of the package on the registry
-#     "path": "./", <-- the path from where to run npm scripts
-#     "dependencies": [] <-- the internal packages dependencies
+#     "path": "./", <-- the path from where to run npm scripts and where angular.json is located
 #   } 
 # }
 ###
